# nni

./: .all-contributorsrc  .gitattributes  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  CONTRIBUTING_zh_CN.md  Dockerfile  LR_colon-cancer_time  Makefile  README.Makefile.md  README.Makefile_zh_CN.md  README.md  README_zh_CN.md  SECURITY_zh_CN.md  Tree_colon-cancer_memory  azure-pipeline.yml  azure-pipelines-daily.yml  azure-pipelines-remote.yml  azure-pipelines.mac.yml  azure-pipelines.test.yml  azure-pipelines.ubuntu.yml  azure-pipelines.yml  build_ts.py  crowdin.yml  install.ps1  install.sh  interim_patch.py  interim_vision_patch.py  kubeconfig  make.py  mkdocs.yml  nas_allstar.md  nfs.yaml  package.json  pipelines-it-remote.yml  playground.py  pylintrc  (+10 more)
.github/: pull_request_template.md
_mnist/: launch.py  mnist.py  v1.yml  v2.yml
archive-del/: azure-pipelines.yml  install.ps1  uninstall.ps1
demo/: __init__.py  agp_pruning_scheduler.py  pruning.py  pruning_scheduler.py  simulated_annealing_pruning_scheduler.py  utils.py
dependencies/: develop.txt  recommended.txt  recommended_gpu.txt  recommended_gpu_legacy.txt  recommended_legacy.txt  required.txt  required_extra.txt  setup.txt
deployment/: Dockerfile  Dockerfile.build.base  README.md  deployment-pipelines.yml  prerelease-build-upload.yml  registered_algorithms.yml
docs/: .gitignore  AdvancedNAS.md  AnnotationSpec.md  Assessors.md  Builtin_Assessors.md  Builtin_Tuner.md  CONTRIBUTING.md  Contribution.rst  Customize_Advisor.md  Customize_Assessor.md  Customize_Tuner.md  CustomizedTuner.md  EnableAssessor.md  Examples.rst  ExperimentConfig.md  FAQ.md  FrameworkControllerMode.md  GetStarted.md  GridSearchTuner.md  HowToChooseTuner.md  HowToContribute.md  HowToDebug.md  InstallNNI_Ubuntu.md  Installation.md  KubeflowMode.md  Makefile  NNICTL.rst  NNICTLDOC.md  Overview.md  PAIMode.md  QuickStart.md  README.md  RELEASE.md  Reference.rst  RemoteMachineMode.md  SQuAD_evolution_examples.md  SearchSpaceSpec.md  SetupNNIDeveloperEnvironment.md  StartExperiment.md  ToContribute.md  (+27 more)
examples/: experiment_config.yml  mask.pth  model.pth  readme.md
experimental/: target_space.py
image/: Dockerfile  Dockerfile.a100
script/figure11/bert_finegrained/propagation/: CMakeLists.txt  run.sh
(+19360 files in other folders)
